--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2952,7 +2952,7 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 
 			#header {
-				padding: 4em 0 0.1em 0 ;
+				padding: 1em 0 0em 0 ;
 			}
 
 				#header nav {
@@ -3272,7 +3272,13 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 
 			#footer {
-				padding: 3em 0 1em 0 ;
+
+				padding : 2em 0 2em 0;
+				background-color: #f6f6f6;
+				height: 550px;
+				width: 30em;
+				text-align: center;
+
 			}
 
 				#footer > .inner {
@@ -3284,7 +3290,7 @@ input, select, textarea {
 
 					#footer > .inner section:nth-child(1) {
 						width: 100%;
-						margin-right: 0;
+						margin-right: 1em;
 						margin: 3em 0 0 0;
 					}
 
